Update and rename test.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="status"></div>
 
     <script>
-        const ipAddress = '66.59.208.176:25565';
+        const ipAddress = 'mc.hypixel.net';
         const apiUrl = `https://api.mcsrvstat.us/simple/${ipAddress}`;
         const statusElement = document.getElementById('status');
 
